fix: update autoencoder script with DOI and model link

--- a/autoencoder_denoising_confluencia.ipynb
+++ b/autoencoder_denoising_confluencia.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
@@ -25,11 +11,21 @@
         "# ================================================\n",
         "# SPECKLE REDUCTION FOR SAR IMAGES USING AUTOENCODER\n",
         "# ================================================\n",
-        "# This script filters SAR satellite images using a pre-trained autoencoder model.\n",
+        "# This script filters SAR satellite images using a pre-trained Autoencoder.\n",
         "# Due to memory constraints, large images are processed in 512x512 patches.\n",
-        "# The model must be trained separately and saved as 'model.h5'.\n",
-        "# Dependencies: TensorFlow 2.15.0, Keras 2.15.0, OpenCV, Rasterio, NumPy\n",
-        "# ================================================\n",
+        "#\n",
+        "# 📄 The Autoencoder used here is described in:\n",
+        "# Ahmed Alejandro Cardona-Mesa et al. (2023)\n",
+        "# \"Optimization of Autoencoders for Speckle Reduction in SAR Imagery Through Variance Analysis and Quantitative Evaluation\"\n",
+        "# Mathematics 2023, 13(3), 457. DOI: https://doi.org/10.3390/math13030457\n",
+        "#\n",
+        "# 🔗 Pre-trained model available at:\n",
+        "# https://github.com/rubenchov/Paper_Coastal_V3/blob/ebfe5a02230c593632f7a298ba470711b82f6b61/Scripts/Autoencoder_despeckling.h5\n",
+        "#\n",
+        "# 👉 To use:\n",
+        "# 1) Download 'Autoencoder_despeckling.h5' from the link above.\n",
+        "# 2) Save it as 'model.h5' in your Google Drive root directory.\n",
+        "#\n",
         "\n",
         "# ---- INSTALL REQUIRED DEPENDENCIES ----\n",
         "!pip install --upgrade --force-reinstall tensorflow==2.15.0\n",
@@ -39,6 +35,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "s_1exVmm4vNV"
+      },
+      "outputs": [],
       "source": [
         "# ---- IMPORT LIBRARIES ----\n",
         "import os\n",
@@ -58,15 +59,15 @@
         "# ---- MOUNT GOOGLE DRIVE ----\n",
         "# Required for loading the model and accessing SAR images\n",
         "drive.mount('/content/drive')\n"
-      ],
-      "metadata": {
-        "id": "s_1exVmm4vNV"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "afMcCjjExM9s"
+      },
+      "outputs": [],
       "source": [
         "# ---- PREPROCESSING FUNCTION ----\n",
         "def preprocess(array):\n",
@@ -96,15 +97,15 @@
         "        \"lon2\": -74.746023\n",
         "    },\n",
         "}"
-      ],
-      "metadata": {
-        "id": "afMcCjjExM9s"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "14JcVCA8xZ3E"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "# ---- MAIN PROCESSING LOOP ----\n",
@@ -167,12 +168,21 @@
         "            dst.write(new, 1)  # Write to the first band\n",
         "\n",
         "        print(f'{zone} {filename} successfully filtered and saved!')"
-      ],
-      "metadata": {
-        "id": "14JcVCA8xZ3E"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
